--- a/Rascunhos/mesa_oper.html
+++ b/Rascunhos/mesa_oper.html
@@ -149,7 +149,7 @@
                 <h2 class="text-2xl font-semibold mb-4 text-red-400">Mapa de Guerra: Kuar-Tor</h2>
                 <div id="mapContainer" class="relative w-full aspect-w-16 aspect-h-9 cursor-default">
                     <!-- MAPA DA CAMPANHA -->
-                    <img id="originalImage" src="https://i.pinimg.com/originals/a3/98/90/a3989003b8de051b4e0e586b36a3ea57.jpg" alt="Mapa de Kuar-Tor" class="rounded-lg object-cover w-full h-full" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e2b3b/94a3b8?text=Mapa+Indispon%C3%ADvel';">
+                    <img id="originalImage" src="mapa.png" alt="Mapa de Kuar-Tor" class="rounded-lg object-cover w-full h-full" onerror="this.onerror=null;this.src='https://placehold.co/600x400/1e2b3b/94a3b8?text=Mapa+Indispon%C3%ADvel';">
                     <div id="pinsContainer" class="absolute top-0 left-0 w-full h-full"></div>
                 </div>
                 <div class="mt-6 pt-4 border-t border-red-900/50">
