--- a/computador_de_kuar_tor.html
+++ b/computador_de_kuar_tor.html
@@ -324,7 +324,7 @@ DIRETIVA SECUNDÁRIA: Anomalias dos antigos laboratórios de Laplace estão livr
                             isProtocoloFantasmaActive = false;
                             clearInterval(alertInterval);
                             promptSymbol.textContent = 'agente@sombra-ativa:~$';
-                            return 'SENHA ACEITA. PROTOCOLO FANTASMA DESATIVADO.\n\nA S.O.M.B.R.A. ESTÁ DE VOLTA.\n\nBEM-VINDO DE VOLTA, AGENTE.';
+                            return 'SENHA ACEITA. PROTOCOLO FANTASMA DESATIVADO.\n\nA S.O.M.B.R.A. ESTÁ DE VOLTA.';
                         } else {
                             return 'S.O.M.B.R.A. já está ativa.';
                         }
@@ -553,3 +553,4 @@ DIRETIVA SECUNDÁRIA: Anomalias dos antigos laboratórios de Laplace estão livr
     </script>
 </body>
 </html>
+
