--- a/computador_de_kuar_tor.html
+++ b/computador_de_kuar_tor.html
@@ -185,9 +185,9 @@ O núcleo de memória principal da S.O.M.B.R.A., contendo dados estratégicos so
 
 ANÁLISE: A memória foi dividida em três fragmentos de dados distintos, cada um ligado a uma das Três Famílias Fundadoras.
 
-- FRAGMENTO 1: Protocolo ZHAUW. Última localização conhecida: Servidores centrais em Portirus, a cidade-fortaleza da família Zhauw.
+- FRAGMENTO 1: Protocolo ZHAUW. Última localização conhecida: Furianisch, A cidade-fortaleza da família Zhauw.
 - FRAGMENTO 2: Protocolo YANG. Última localização conhecida: Arquivos do Templo de Elementalis, o centro de poder da família Yang.
-- FRAGMENTO 3: Protocolo XANG. Última localização conhecida: Cofre de dados privado nos Laboratórios Laplace, sob controle da família Xang.
+- FRAGMENTO 3: Protocolo XANG. Última localização conhecida: Nos Laboratórios do Inventor, cidade Xang.
 
 DIRETIVA: Recuperar os três fragmentos é essencial para restaurar a capacidade total da S.O.M.B.R.A. e entender como enfrentar a ameaça principal. Proceda com extrema cautela.
 `,
@@ -324,7 +324,7 @@ DIRETIVA SECUNDÁRIA: Anomalias dos antigos laboratórios de Laplace estão livr
                             isProtocoloFantasmaActive = false;
                             clearInterval(alertInterval);
                             promptSymbol.textContent = 'agente@sombra-ativa:~$';
-                            return 'SENHA ACEITA. PROTOCOLO FANTASMA DESATIVADO.\n\nA S.O.M.B.R.A. ESTÁ DE VOLTA.';
+                            return 'SENHA ACEITA. PROTOCOLO FANTASMA DESATIVADO.\n\nA S.O.M.B.R.A. ESTÁ DE VOLTA.\n\nBEM-VINDO, DIRETOR.';
                         } else {
                             return 'S.O.M.B.R.A. já está ativa.';
                         }
@@ -553,4 +553,5 @@ DIRETIVA SECUNDÁRIA: Anomalias dos antigos laboratórios de Laplace estão livr
     </script>
 </body>
 </html>
+
 
