--- a/computador_de_kuar_tor.html
+++ b/computador_de_kuar_tor.html
@@ -201,7 +201,7 @@ DIRETIVA PRIMÁRIA: Servir como uma força-tarefa oculta, operando fora da buroc
 OBJETIVOS:
 1. Executar missões de alta periculosidade e importância estratégica em Kuar-Tor.
 2. Investigar a origem do Vazio e da Corrupção sem interferências externas.
-3. Conter anomalias perigosas liberadas dos antigos laboratórios de Laplace após o cataclismo.
+3. Conter anomalias perigosas liberadas dos antigos laboratórios do Inventor após o cataclismo.
 4. Operar com total autonomia e sigilo. O fracasso não é uma opção; o anonimato é a nossa maior arma.
 `,
             'dossie_anya.txt': `
@@ -553,5 +553,6 @@ DIRETIVA SECUNDÁRIA: Anomalias dos antigos laboratórios de Laplace estão livr
     </script>
 </body>
 </html>
+
 
 
